--- a/create_ap.conf
+++ b/create_ap.conf
@@ -8,6 +8,7 @@ NO_DNSMASQ=0
 HIDDEN=0
 MAC_FILTER=0
 MAC_FILTER_ACCEPT=/etc/hostapd/hostapd.accept
+MAC_FILTER_DENY=/etc/hostapd/hostapd.deny
 ISOLATE_CLIENTS=0
 SHARE_METHOD=nat
 IEEE80211N=0
