--- a/create_ap.conf
+++ b/create_ap.conf
@@ -1,4 +1,4 @@
-CHANNEL=default
+CHANNEL=7
 GATEWAY=10.0.0.1
 WPA_VERSION=2
 ETC_HOSTS=0
@@ -10,7 +10,7 @@ MAC_FILTER=0
 MAC_FILTER_ACCEPT=/etc/hostapd/hostapd.accept
 MAC_FILTER_DENY=/etc/hostapd/hostapd.deny
 ISOLATE_CLIENTS=0
-SHARE_METHOD=nat
+SHARE_METHOD=bridge
 IEEE80211N=0
 IEEE80211AC=0
 HT_CAPAB=[HT40+]
@@ -24,6 +24,6 @@ DAEMONIZE=0
 NO_HAVEGED=0
 WIFI_IFACE=wlan0
 INTERNET_IFACE=eth0
-SSID=MyAccessPoint
-PASSPHRASE=12345678
+SSID=tkwifi
+PASSPHRASE=tn24549105
 USE_PSK=0
