--- a/create_ap.conf
+++ b/create_ap.conf
@@ -1,8 +1,9 @@
-CHANNEL=7
-GATEWAY=10.0.0.1
+CHANNEL=default
+GATEWAY=192.168.12.1
 WPA_VERSION=2
 ETC_HOSTS=0
 DHCP_DNS=gateway
+DHCP_RANGE=
 NO_DNS=0
 NO_DNSMASQ=0
 HIDDEN=0
